k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sinatra-demo
  labels:
    service: sinatra
spec:
  selector:
    app: sinatra
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
