k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: sinatra-ingress
    kubernetes.io/ingress.class: gce
  name: sinatra-ingress
spec:
  tls:
    - secretName: sinatra-tls
  backend:
    serviceName: sinatra-demo
    servicePort: 80
